[package]
name = "pilcrow"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
euclid = "0.17"
libc = "0.2"
pulldown-cmark = "0.1"
rayon = "1.0"

[dependencies.core-foundation]
path = "/Users/pcwalton/Source/core-foundation-rs/core-foundation"

[dependencies.core-graphics]
path = "/Users/pcwalton/Source/core-foundation-rs/core-graphics"

[dependencies.core-text]
path = "/Users/pcwalton/Source/core-foundation-rs/core-text"

[build-dependencies]
cbindgen = "0.5"
