[package]
name = "pilcrow"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.0"
euclid = "0.17"
indexmap = "1.0"
lazy_static = "1.0"
libc = "0.2"
objc = "0.2"
pulldown-cmark = "0.1"
rayon = "1.0"

[dependencies.cocoa]
path = "/Users/pcwalton/Source/core-foundation-rs/cocoa"

[dependencies.core-foundation]
path = "/Users/pcwalton/Source/core-foundation-rs/core-foundation"

[dependencies.core-graphics]
path = "/Users/pcwalton/Source/core-foundation-rs/core-graphics"

[dependencies.core-text]
path = "/Users/pcwalton/Source/core-foundation-rs/core-text"

[dependencies.minikin-sys]
path = "/Users/pcwalton/Source/android/platform/frameworks/minikin"

[build-dependencies]
cbindgen = "0.5"
